# web-quiz-app

./: .gitignore  LICENSE  README.md  __init__.py  __main__.py  data_manager.py  index.html  notebook.ipynb  pyproject.toml  webQuizApp.code-workspace
.github/workflows/: greetings.yml  python-publish.yml
archive/: quiz.js
data/: quiz.csv  quiz.xlsx  results.csv  results.xlsx
quizServer/: __init__.py  dataManager.py  main.py
quizServer/static/css/: style.css
quizServer/templates/: base.html.jinja  error.html.jinja  results.html.jinja
quiz_server/: __init__.py  data.py  debug.py  error.py  quiz.default.csv  quiz.py  utils.py
quiz_server/data/: quiz.xlsx  results.csv  results.xlsx
quiz_server/static/: manifest.json
quiz_server/static/css/: style.css  styles.css
quiz_server/static/scripts/modules/: DATA.js
quiz_server/templates/: base.html  base.jinja  data.jinja  error.jinja  index.html  index.jinja  info.html  list.html.jinja  list.jinja  quiz.html  quiz.html.jinja  quiz.jinja
quiz_server/templates/old/: tests.html.jinja
static/: manifest.json
static/css/: style.css
static/scripts/: quiz.js
templates/: base.html.jinja  error.html.jinja  list.html.jinja  quiz.html.jinja  results.html.jinja  tests.html.jinja
