[project]
name = "quiz_server"
version = "1.0.0"
description = "A Flask-based web application for managing and serving quizzes."
authors = [{ name = "Benjamin Bowles", email = "benjamin.d.bowles@gmail.com" }]
dependencies = ["flask", "python-dotenv", "pandas"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
