[project]
name = "quiz_server"
version = "1.0.0"
description = "A simple quiz application that allows users to create and take quizzes and track results in a spreadsheet."
authors = [{ name = "Benjamin Bowles" }]
dependencies = ["flask", "pandas", "python-dotenv"]


[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
